--- a/uxp-frontend/nginx.conf
+++ b/uxp-frontend/nginx.conf
@@ -1,7 +1,9 @@
-user www-data;
+#user www-data;
 worker_processes auto;
-pid /run/nginx.pid;
+pid /tmp/nginx/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
+
+
 
 events {
         worker_connections 768;
@@ -58,4 +60,12 @@ http {
 
         include /etc/nginx/conf.d/*.conf;
         include /etc/nginx/sites-enabled/*;
+
+         # временные каталоги
+        client_body_temp_path /tmp/nginx/temp;
+        proxy_temp_path       /tmp/nginx/temp;
+        fastcgi_temp_path     /tmp/nginx/temp;
+        uwsgi_temp_path       /tmp/nginx/temp;
+        scgi_temp_path        /tmp/nginx/temp;
+
 }
