--- a/uxp-frontend/nginx.conf
+++ b/uxp-frontend/nginx.conf
@@ -62,10 +62,10 @@ http {
         include /etc/nginx/sites-enabled/*;
 
          # временные каталоги
-        client_body_temp_path /tmp/nginx/temp;
-        proxy_temp_path       /tmp/nginx/temp;
-        fastcgi_temp_path     /tmp/nginx/temp;
-        uwsgi_temp_path       /tmp/nginx/temp;
-        scgi_temp_path        /tmp/nginx/temp;
+        client_body_temp_path /tmp/nginx;
+        proxy_temp_path       /tmp/nginx;
+        fastcgi_temp_path     /tmp/nginx;
+        uwsgi_temp_path       /tmp/nginx;
+        scgi_temp_path        /tmp/nginx;
 
 }
