--- a/uxp-ocsp-cache/Dockerfile
+++ b/uxp-ocsp-cache/Dockerfile
@@ -45,6 +45,7 @@ RUN apt install /deb/libgoogle-perftools4_2.9.1-0ubuntu3_amd64.deb && rm -rf /de
 
 ENV LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libtcmalloc.so.4
 
+RUN rm /bin/bash && rm /bin/sh
 
 #ENTRYPOINT ["top", "-b"]
 USER uxp
